// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TBaseCamera lookAt should set the rotation correctly 1`] = `
[
  -0.04457065090537071,
  0.9481061697006226,
  -0.274656742811203,
  -0.15385644137859344,
]
`;

exports[`TBaseCamera lookAt should set the rotation correctly 2`] = `
[
  -0.274656742811203,
  0.15385644137859344,
  0.04457065090537071,
  0.9481061697006226,
]
`;
